--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "watch": "sass --watch ./sass/:./css/",
+    "watch": "sass --watch ./src/sass/:./src/css/",
     "format": "prettier --write .",
     "lint": "eslint --fix . --ext .js"
   },
